--- a/Views/Doctor/PatientList.cshtml
+++ b/Views/Doctor/PatientList.cshtml
@@ -118,7 +118,10 @@
                                             }
                                             else
                                             {
-                                                <a class="btn btn-outline-warning btn-sm" disabled title="Patient must be admitted first">Instruct Discharge</a>
+                                                <form asp-controller="Doctor" asp-action="CheckOutPatient" method="post" style="display:inline;">
+                                                    <input type="hidden" name="appointmentId" value="@admission.AppointmentId" />
+                                                    <button type="submit" class="btn btn-outline-secondary btn-sm">CheckOut</button>
+                                                </form>
 
                                             }
                                             
