--- a/Views/Nurse/ViewInstructions.cshtml
+++ b/Views/Nurse/ViewInstructions.cshtml
@@ -65,4 +65,10 @@
             }
         </tbody>
     </table>
+    <!-- Back Button -->
+    <div class="text-center mt-4">
+        <a asp-action="Index" asp-controller="Nurse" class="btn btn-secondary px-4">
+            <i class="bi bi-arrow-left-circle me-1"></i> Back to Dashboard
+        </a>
+    </div>
 </div>
